--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,29 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
+
+group = 'pranavbot'
+version = '1.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 }
 
 test {
     useJUnitPlatform()
-
-    testLogging {
-        events "passed", "skipped", "failed"
-
-        showExceptions true
-        exceptionFormat "full"
-        showCauses true
-        showStackTraces true
-        showStandardStreams = false
-    }
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass = 'pranavbot.PranavBot'  // Your main class with package
 }
 
-shadowJar {
-    archiveBaseName = "duke"
-    archiveClassifier = null
-}
-
-run{
-    standardInput = System.in
+jar {
+    manifest {
+        attributes 'Main-Class': 'pranavbot.PranavBot'
+    }
 }
