--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'checkstyle'
 }
 
 repositories {
@@ -11,6 +12,13 @@ repositories {
 dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+}
+
+checkstyle {
+    toolVersion = '10.12.0'   // Match the plugin version
+    configFile = file("config/checkstyle/checkstyle.xml")
+    configProperties = ["suppressionsFile": file("config/checkstyle/suppressions.xml")]
+    maxWarnings = 0   // Enforce zero warnings for full marks
 }
 
 test {
