--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'checkstyle'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 repositories {
@@ -35,8 +36,13 @@ test {
     }
 }
 
+javafx {
+    version = '21.0.1'
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
+}
+
 application {
-    mainClass.set("pranavbot.PranavBot")
+    mainClass.set("pranavbot.Launcher")
 }
 
 shadowJar {
